# auto-vscode

./: CMakeLists.txt  README.md  install.sh  test1.sh  test2.sh  vscode.sh
include/: Header.h
src/: Header.cpp
